--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/routes.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/help.js"></script>
